examples/test/testpolicy5739.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5739
  namespace: namespace202
spec:
  podSelector:
    matchLabels:
      key37: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value18
          key7: value47
          key3: value19
      podSelector:
        matchLabels:
          key33: value4
          key4: value7
